tests/Frontend/inputs/invalid/invalid_5.qasm
OPENQASM 2.0;

qreg q[1];
creg c[1];
measure q[0] -> q[0];
